--- a/global.properties
+++ b/global.properties
@@ -1,1 +1,3 @@
-org.moeaframework.analysis.diagnostics.problems = GAA
+org.moeaframework.analysis.diagnostics.problems = GAA, HBV, \
+	WDS(TRN), WDS(TLN), WDS(BAK), WDS(NYT), WDS(BLA), WDS(HAN), WDS(HOY), \
+	WDS(FOS), WDS(PES), WDS(MOD), WDS(BIN), WDS(EXN)
