--- a/global.properties
+++ b/global.properties
@@ -1,3 +1,7 @@
 org.moeaframework.analysis.diagnostics.problems = GAA, HBV, \
 	WDS(TRN), WDS(TLN), WDS(BAK), WDS(NYT), WDS(BLA), WDS(HAN), WDS(HOY), \
 	WDS(FOS), WDS(PES), WDS(MOD), WDS(BIN), WDS(EXN)
+
+## The Radar Waveform Design problem requires Matlab.  By default, the command
+## 'matlab' is used, but a custom path can be specified below if required.
+#matlab.path = /usr/global/matlab/R2013a/bin/matlab
