--- a/global.properties
+++ b/global.properties
@@ -1,6 +1,7 @@
 org.moeaframework.analysis.diagnostics.problems = GAA, HBV, \
 	WDS(TRN), WDS(TLN), WDS(BAK), WDS(NYT), WDS(BLA), WDS(HAN), WDS(HOY), \
-	WDS(FOS), WDS(PES), WDS(MOD), WDS(BIN), WDS(EXN)
+	WDS(FOS), WDS(PES), WDS(MOD), WDS(BIN), WDS(EXN), \
+	CarSideImpact, ElectricMotor, LakeProblem
 
 ## The Radar Waveform Design problem requires Matlab.  By default, the command
 ## 'matlab' is used, but a custom path can be specified below if required.
