--- a/build.xml
+++ b/build.xml
@@ -97,6 +97,7 @@ Use of these build scripts requires Apache Ant to be installed.  See
 		</javac>
 
 		<copy todir="${build}/META-INF">
+			<fileset dir="META-INF" />
 			<path refid="requiredfiles" />
 		</copy>
 		
