--- a/native/Radar/Makefile
+++ b/native/Radar/Makefile
@@ -1,9 +1,9 @@
 CC = gcc
-SRC_DIR = src
+SHARED_DIR = ../shared
 C_FLAGS = -Wall -O3 -fPIC
 
 all:
-	$(CC) $(C_FLAGS) -o bin/moeaframework.o -c $(SRC_DIR)/moeaframework.c
+	$(CC) $(C_FLAGS) -o bin/moeaframework.o -c $(SHARED_DIR)/moeaframework.c
 	ld -G bin/moeaframework.o -o bin/libmoeaframework.so
 	rm bin/moeaframework.o
 	
