Fix WDS makefile

--- a/native/WDS/Makefile
+++ b/native/WDS/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 SRC_DIR = src
-=SHARED_DIR = ../shared
+SHARED_DIR = ../shared
 SOURCE = $(SRC_DIR)/main.c $(SRC_DIR)/models.c $(SHARED_DIR)/moeaframework.c
 C_FLAGS = -I$(SRC_DIR)/epanet2 -I$(SHARED_DIR) -Lbin -lm -lepanet2 -Wl,-R,\.
 
