--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -14,3 +14,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run Make
         run: make -C native
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: native-windows
+          path: native/
