Update Makefiles to detect linux

--- a/native/LRGV/Makefile
+++ b/native/LRGV/Makefile
@@ -2,7 +2,13 @@ CC=g++
 TARGET=lrgv
 SRC_DIR = src
 SHARED_DIR = ../shared
-C_FLAGS=-O3 -I$(SRC_DIR) -I$(SHARED_DIR) -DLINUX
+C_FLAGS=-O3 -I$(SRC_DIR) -I$(SHARED_DIR)
+
+PLATFORM := $(shell uname)
+ifeq  ($(PLATFORM),Linux)
+    C_FLAGS += -DLINUX
+endif
+
 SOURCE = $(SRC_DIR)/lrgv_main.cpp \
 	$(SHARED_DIR)/moeaframework.c \
 	$(SRC_DIR)/lrgv_functions.cpp \
