--- a/native/HBV/Makefile
+++ b/native/HBV/Makefile
@@ -32,8 +32,10 @@ CC_SERIAL = g++
 C_FLAGS = -O3 -DOUT_TO_SCREEN -DHBVMOD -DRANGER_MEMORY_TRICK -DSERIAL -lm
 C_FLAGS_DEBUG = -g -O0 -DOUT_TO_SCREEN -DHBVMOD -DRANGER_MEMORY_TRICK -DSERIAL -lm
 
-PLATFORM := $(shell uname)
-ifeq  ($(PLATFORM),Linux)
+ifeq ($(OS),Windows_NT)
+    C_FLAGS += -static-libgcc -static-libstdc++
+    C_FLAGS_DEBUG += -static-libgcc -static-libstdc++
+else
     C_FLAGS += -DLINUX
     C_FLAGS_DEBUG += -DLINUX
 endif
