--- a/native/WDS/Makefile
+++ b/native/WDS/Makefile
@@ -4,6 +4,10 @@ SHARED_DIR = ../shared
 SOURCE = $(SRC_DIR)/main.c $(SRC_DIR)/models.c $(SHARED_DIR)/moeaframework.c
 C_FLAGS = -I$(SRC_DIR)/epanet2 -I$(SHARED_DIR) -Lbin -lm -lepanet2 -Wl,-R,\.
 
+ifeq ($(OS),Windows_NT)
+	C_FLAGS += -static-libgcc -static-libstdc++
+endif
+
 all:
 	$(MAKE) -C $(SRC_DIR)/epanet2
 	$(CC) -o bin/TRN -DTRN $(SOURCE) $(C_FLAGS)
