--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,8 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: zulu
-      - name: Install required software
-        run: |
-          sudo apt install xmlstarlet
-      - name: Get project settings
-        run: |
-          shortname=$(xmlstarlet sel -N x="http://maven.apache.org/POM/4.0.0" -t -v "//x:project/x:artifactId/text()" pom.xml)
-          version=$(xmlstarlet sel -N x="http://maven.apache.org/POM/4.0.0" -t -v "//x:project/x:version/text()" pom.xml)
-          echo "BUILD_NAME=${shortname}" >> $GITHUB_ENV
-          echo "BUILD_VERSION=${version}" >> $GITHUB_ENV
-          echo "BUILD_ARTIFACT=${shortname}-${version}" >> $GITHUB_ENV
-      - name: Build native programs
+      - name: Build native programs (Linux only)
+        if: runner.os == 'Linux'
         run: make -C native
       - name: Build and test with Maven
         run: mvn package
@@ -41,7 +32,7 @@ jobs:
 
           MOEAFRAMEWORK_ROOT=$(realpath -s MOEAFramework-${VERSION})
           ln -s $(realpath -s native/) ${MOEAFRAMEWORK_ROOT}/native
-          cp target/${BUILD_ARTIFACT}.jar ${MOEAFRAMEWORK_ROOT}/lib
+          cp target/real-world-benchmarks-[0-9].[0-9].[0-9].jar ${MOEAFRAMEWORK_ROOT}/lib
 
           cd ${MOEAFRAMEWORK_ROOT}
-          java -cp "lib/*" org.moeaframework.analysis.tools.Solve -b GAA -a NSGAII -n 10000 -f GAA.result
+          java -cp "lib/*" org.moeaframework.analysis.tools.Solve -a NSGAII -b GAA -n 10000 -f GAA.result
