More updates to Windows CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
         run: make -C native
       - name: Build and test with Maven
         run: mvn package
-      - name: Test with latest MOEA Framework JAR
-        shell: bash
+      - name: Test with latest MOEA Framework JAR (Linux only)
+        if: runner.os == 'Linux'
         run: |
           VERSION=$(curl https://api.github.com/repos/MOEAFramework/MOEAFramework/releases/latest | jq '.tag_name' | grep -oEi '[0-9]+\.[0-9]+(\.[0-9]+)?')
           wget https://github.com/MOEAFramework/MOEAFramework/releases/download/v${VERSION}/MOEAFramework-${VERSION}.tar.gz
