--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
 .settings/
 target/
-jMetal.log
 dependency-reduced-pom.xml
+
+*.so
+*.exe
+*.dll
+
+native/HBV/bin/hbv
+native/LRGV/bin/lrgv
+native/LakeProblem/bin/lake
+native/WDS/bin/BAK
+native/WDS/bin/BIN
+native/WDS/bin/BLA
+native/WDS/bin/EXN
+native/WDS/bin/FOS
+native/WDS/bin/GOY
+native/WDS/bin/HAN
+native/WDS/bin/MOD
+native/WDS/bin/NYT
+native/WDS/bin/PES
+native/WDS/bin/TLN
+native/WDS/bin/TRN
 native/WDS/bin/reportFile.rpt
