--- a/moeaframework.properties
+++ b/moeaframework.properties
@@ -6,3 +6,7 @@ org.moeaframework.analysis.diagnostics.problems = GAA, HBV, \
 ## The Radar Waveform Design problem requires Matlab.  By default, the command
 ## 'matlab' is used, but a custom path can be specified below if required.
 #matlab.path = /usr/global/matlab/R2013a/bin/matlab
+
+## Time to wait, in milliseconds, after launching Matlab before attempting to
+## establish a connection.
+#matlab.sleep = 30000
