--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: zulu
+      - uses: matlab-actions/setup-matlab@v1
+      - name: Setup Radar Waveform code
+        run: |
+          cd native/Radar/bin
+          wget https://perspectival-classi.000webhostapp.com/code/radar_many.zip \
+            || wget https://github.com/MOEAFramework/Archive/raw/main/radar_many.zip
+          unzip radar_many.zip
+          cp web_code/testpris.p testpris.p
       - name: Build native programs
         run: make -C native
       - name: Build and test with Maven
