--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
           distribution: zulu
       - uses: matlab-actions/setup-matlab@v1
       - name: Setup Radar Waveform code
+        shell: bash
         run: |
           cd native/Radar/bin
           wget https://perspectival-classi.000webhostapp.com/code/radar_many.zip \
