--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,13 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: zulu
+      - name: Setup up MSYS2 (Windows)
+        uses: msys2/setup-msys2@v2
+        if: runner.os == 'Windows'
       - uses: matlab-actions/setup-matlab@v1
+      - name: Display Matlab help
+        run: matlab -h
       - name: Setup Radar Waveform code
-        shell: bash
         run: |
           cd native/Radar/bin
           wget https://perspectival-classi.000webhostapp.com/code/radar_many.zip \
