--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,10 @@ jobs:
         run: |
           ls -R C:\msys64
           echo "C:\msys64\usr\bin" >> $GITHUB_PATH
-      - run: which wget
-      - run: which wget.exe
+      - name: Which wget
+        run: |
+          which wget || true
+          which wget.exe || true
       - uses: matlab-actions/setup-matlab@v1
       - name: Setup Radar Waveform code
         run: |
