--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
           echo "C:\msys64\usr\bin" >> $GITHUB_PATH
       - name: Which wget
         run: |
-          which wget || true
-          which wget.exe || true
+          set PATH=C:\msys64\usr\bin;%PATH%
+          which wget
       - uses: matlab-actions/setup-matlab@v1
       - name: Setup Radar Waveform code
         run: |
