Update Radar problem docs

--- a/moeaframework.properties
+++ b/moeaframework.properties
@@ -7,6 +7,10 @@ org.moeaframework.analysis.diagnostics.problems = GAA, HBV, \
 ## 'matlab' is used, but a custom path can be specified below if required.
 #matlab.path = /usr/global/matlab/R2013a/bin/matlab
 
+## Static port used to connect to Matlab.  If unset, a port will be chosen
+## randomly.
+#matlab.port = 20001
+
 ## Time to wait, in milliseconds, after launching Matlab before attempting to
-## establish a connection.
+## establish a connection.  We found 30 seconds works well.
 #matlab.sleep = 30000
