Update to version 4.2

--- a/moeaframework.properties
+++ b/moeaframework.properties
@@ -11,6 +11,6 @@ org.moeaframework.analysis.diagnostics.problems = GAA, HBV, \
 ## randomly.
 #matlab.port = 20001
 
-## Time to wait, in milliseconds, after launching Matlab before attempting to
-## establish a connection.  We found 30 seconds works well.
-#matlab.sleep = 30000
+## The number of retries, each delayed by 1 second, spent trying to establish
+## the connection
+#matlab.retries = 30
