--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,11 @@ jobs:
         os: [ 'ubuntu-latest', 'windows-latest' ]
         java: [ '17', '18', '19', '20', '21' ]
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v4
+      - name: Setup build
+        uses: MOEAFramework/.github/actions/setup-build@main
         with:
           java-version: ${{ matrix.java }}
-          distribution: zulu
-      - name: Setup Matlab (Linux only)
-        uses: matlab-actions/setup-matlab@v1
-        if: runner.os == 'Linux'
+          setup-matlab: true
       - name: Setup Radar Waveform code (Linux only)
         if: runner.os == 'Linux'
         run: |
