--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -77,6 +77,7 @@ jobs:
           extra-files: native-windows.zip
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Trigger integration tests
+        if: ${{ inputs.trigger-tests }}
         uses: MOEAFramework/.github/actions/integration-test@main
         with:
           github-token: ${{ secrets.PAT }}
