--- a/native/LakeProblem/Makefile
+++ b/native/LakeProblem/Makefile
@@ -2,7 +2,7 @@ CC = g++
 SRC_DIR = src
 SHARED_DIR = ../shared
 TARGET = lake
-CFLAGS = -O3 -Wno-unused-local-typedefs -I$(SRC_DIR) -I$(SHARED_DIR) -I$(SRC_DIR)/boost_1_56_0
+CFLAGS = -O3 -Wno-unused-local-typedefs -I$(SRC_DIR) -I$(SHARED_DIR) -I$(SRC_DIR)/boost_1_56_0 -std=c++11
 SOURCE = $(SRC_DIR)/main-lake.cpp $(SHARED_DIR)/moeaframework.c
 LIBS =
 
