Revert "Use C11 standard"
This reverts commit 5e22cdab06490055f7959f92b43f4d1ffc8aeefc.

--- a/native/HBV/Makefile
+++ b/native/HBV/Makefile
@@ -29,8 +29,8 @@ SRC_DIR = src
 CC_SERIAL = g++
 
 #If profiling, add the -pg flag in the last line of these as well
-C_FLAGS = -O3 -DOUT_TO_SCREEN -DHBVMOD -DRANGER_MEMORY_TRICK -DSERIAL -lm -std=c++11
-C_FLAGS_DEBUG = -g -O0 -DOUT_TO_SCREEN -DHBVMOD -DRANGER_MEMORY_TRICK -DSERIAL -lm -std=c++11
+C_FLAGS = -O3 -DOUT_TO_SCREEN -DHBVMOD -DRANGER_MEMORY_TRICK -DSERIAL -lm
+C_FLAGS_DEBUG = -g -O0 -DOUT_TO_SCREEN -DHBVMOD -DRANGER_MEMORY_TRICK -DSERIAL -lm
 
 ifeq ($(OS),Windows_NT)
     C_FLAGS += -static
