--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,18 +10,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ 'ubuntu-latest', 'windows-latest' ]
+        os: [ 'ubuntu-latest' ]
         java: [ '17', '18', '19', '20', '21' ]
     steps:
       - name: Setup build
         uses: MOEAFramework/.github/actions/setup-build@main
         with:
           java-version: ${{ matrix.java }}
-      - name: Set up Matlab
-        if: runner.os == 'Linux'
-        uses: matlab-actions/setup-matlab@v1
-      - name: Setup Radar Waveform code (Linux only)
-        if: runner.os == 'Linux'
+		  setup-matlab: true
+      - name: Setup Radar Waveform code
         run: |
           cd native/Radar/bin
           wget https://perspectival-classi.000webhostapp.com/code/radar_many.zip \
@@ -29,23 +26,19 @@ jobs:
           unzip radar_many.zip
           cp web_code/testpris.p testpris.p
       - name: Build native programs
-        run: make -C native
-      - name: Build and test with Maven
-        run: mvn package
-      - name: Test with latest MOEA Framework JAR (Linux only)
-        if: false && runner.os == 'Linux'
         run: |
-          VERSION=$(curl https://api.github.com/repos/MOEAFramework/MOEAFramework/releases/latest | jq '.tag_name' | grep -oEi '[0-9]+\.[0-9]+(\.[0-9]+)?')
-          wget https://github.com/MOEAFramework/MOEAFramework/releases/download/v${VERSION}/MOEAFramework-${VERSION}.tar.gz
-          tar -xzf MOEAFramework-${VERSION}.tar.gz
-
-          MOEAFRAMEWORK_ROOT=$(realpath -s MOEAFramework-${VERSION})
-          ln -s $(realpath -s native/) ${MOEAFRAMEWORK_ROOT}/native
-          cp target/real-world-benchmarks-[0-9].[0-9].[0-9].jar ${MOEAFRAMEWORK_ROOT}/lib
-          
-          rm native/shared/*
-          cp ${MOEAFRAMEWORK_ROOT}/examples/moeaframework.[ch] native/shared
           make -C native
-
-          cd ${MOEAFRAMEWORK_ROOT}
-          java -cp "lib/*" org.moeaframework.analysis.tools.Solve -a NSGAII -b LRGV -n 1000 -f output.set
+      - name: Build and test with Maven
+        run: |
+          mvn package
+      - name: Test example
+        run: |
+          mvn compile exec:java -Dexec.mainClass="org.moeaframework.benchmarks.Example"
+      - name: Test solve
+        run: |
+          mvn compile exec:java -Dexec.mainClass="org.moeaframework.analysis.tools.Solve" \
+		    -Dexec.args="--algorithm NSGAII --problem LRGV --numberOfEvaluations 10000 --output LRGV_Result.txt"
+          cat LRGV_Result.txt
+      - name: Validate README
+        run: |
+          mvn compile exec:java -Dexec.mainClass="org.moeaframework.util.cli.UpdateCodeSamples" -Dexec.args="README.md"
